--- a/public/htmls/saludplus_login_ui.html
+++ b/public/htmls/saludplus_login_ui.html
@@ -96,7 +96,7 @@
   <div class="login-container">
     <div class="login-box">
       <div class="logo">
-        <img src="https://cdn-icons-png.flaticon.com/512/2966/2966486.png" alt="logo"> Salud<strong>Plus</strong>
+        <img src="https://cdn-icons-png.flaticon.com/512/2966/2966486.png" alt="logo"> Hospital San Jorge<strong> Laboratorio</strong>
       </div>
       <input type="text" class="input-field" placeholder="&#xf007;  Usuario" style="font-family:Arial, FontAwesome">
       <input type="password" class="input-field" placeholder="&#xf023;  Contraseña" style="font-family:Arial, FontAwesome">
