--- a/public/htmls/saludplus_login_ui.html
+++ b/public/htmls/saludplus_login_ui.html
@@ -32,7 +32,7 @@
     .logo {
       font-size: 28px;
       font-weight: bold;
-      color: #0078A0;
+      color: rgb(0, 191, 255);
       margin-bottom: 20px;
     }
 
@@ -52,7 +52,7 @@
     }
 
     .btn {
-      background-color: #0078A0;
+      background-color: rgb(0, 191, 255);
       color: white;
       padding: 12px;
       width: 100%;
