--- a/public/htmls/Recepción de solicitudes de PQRSDF.html
+++ b/public/htmls/Recepción de solicitudes de PQRSDF.html
@@ -116,8 +116,13 @@
       <div class="card-bd">
 
         <div class="alert" role="note">
-          1) **Móvil y web** habilitado · 2) **Protección de datos (Ley 1581 de 2012)** · 3) Campos con (<strong>*</strong>) obligatorios.
-        </div>
+  <ul>
+    <li><strong>Disponibilidad del formulario en dispositivos móviles:</strong> El formato debe estar habilitado tanto en la página web como en aplicaciones móviles.</li>
+    <li><strong>Seguridad Digital:</strong> Garantizar la protección de datos personales según la Ley 1581 de 2012 (habeas data).</li>
+    <li>(<strong>*</strong>) Campos obligatorios.</li>
+  </ul>
+</div>
+
 
         <form id="pqrsdfForm" novalidate>
           <!-- 2.2 Selección de la opción -->
